# pico_cluster

./: .gitignore  CMakeLists.txt  README.md  client.py  gen_plots.py
data/: 1_(14-16-3)_(3-3)_0457.json  1_(14-16-3)_(3-3)_0746.json  1_(14-16-3)_(3-3)_2388.json  1_(14-16-3)_(3-3)_2903.json  1_(14-16-3)_(3-3)_4344.json  1_(14-16-3)_(3-3)_6177.json  1_(14-16-3)_(3-3)_6664.json  1_(14-16-3)_(3-3)_7612.json  1_(14-16-3)_(3-3)_9374.json  1_(14-16-3)_(3-3)_9875.json  2_(14-16-3)_(3-3)_0297.json  2_(14-16-3)_(3-3)_0731.json  2_(14-16-3)_(3-3)_2457.json  2_(14-16-3)_(3-3)_3523.json  2_(14-16-3)_(3-3)_3587.json  2_(14-16-3)_(3-3)_3952.json  2_(14-16-3)_(3-3)_4835.json  2_(14-16-3)_(3-3)_5427.json  2_(14-16-3)_(3-3)_5538.json  2_(14-16-3)_(3-3)_6257.json  4_(14-16-3)_(3-3)_0389.json  4_(14-16-3)_(3-3)_3843.json  4_(14-16-3)_(3-3)_5026.json  4_(14-16-3)_(3-3)_5561.json  4_(14-16-3)_(3-3)_6577.json  4_(14-16-3)_(3-3)_7792.json  4_(14-16-3)_(3-3)_7856.json  4_(14-16-3)_(3-3)_8062.json  4_(14-16-3)_(3-3)_8314.json  4_(14-16-3)_(3-3)_9787.json
docs/: Journal.md
docs/writeup/: bibliography.bib  main.tex
i2c_slave/: README.md
inc/: shared.h
src/: compute_main.c  head_main.c  shared.c
